--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,27 @@
 
 <header class="header">
   <h1 class="header__logo logo">Cinemaddict</h1>
+
+  <!-- Форма поиска -->
+
+  <!-- Звание пользователя -->
 </header>
 
 <main class="main">
+  <!-- Меню -->
+
+  <!-- Сортировка -->
+
+  <!-- Контент -->
 </main>
 
-<footer class="footer">
-</footer>
 
-<script src="./bundle.js"></script>
+<footer class="footer">
+  <!--<section class="footer__logo logo logo&#45;&#45;smaller">Cinemaddict</section>-->
+  <!--<section class="footer__statistics">-->
+    <!--<p>130 291 movies inside</p>-->
+  <!--</section>-->
+</footer>
+<script src="./bundle.js"></script>;
 </body>
 </html>
