--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<header class="header">
+<header class="header" id="header">
   <h1 class="header__logo logo">Cinemaddict</h1>
 
   <!-- Форма поиска -->
@@ -19,7 +19,7 @@
   <!-- Звание пользователя -->
 </header>
 
-<main class="main">
+<main class="main" id="main">
   <!-- Меню -->
 
   <!-- Сортировка -->
@@ -28,12 +28,12 @@
 </main>
 
 
-<footer class="footer">
+<footer class="footer" id="footer">
   <!--<section class="footer__logo logo logo&#45;&#45;smaller">Cinemaddict</section>-->
   <!--<section class="footer__statistics">-->
     <!--<p>130 291 movies inside</p>-->
   <!--</section>-->
 </footer>
-<script src="./bundle.js"></script>;
+<script src="./bundle.js"></script>
 </body>
 </html>
