переписала на классы хедер и футер

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
 
 
 <footer class="footer" id="footer">
-  <!--<section class="footer__logo logo logo&#45;&#45;smaller">Cinemaddict</section>-->
-  <!--<section class="footer__statistics">-->
+  <section class="footer__logo logo logo--smaller">Cinemaddict</section>
+  <section class="footer__statistics">
     <!--<p>130 291 movies inside</p>-->
-  <!--</section>-->
+  </section>
 </footer>
 <script src="./bundle.js"></script>
 </body>
